--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
     "bootstrap": "^5.0.2",
+    "emailjs-com": "^3.2.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
     "formik-material-ui": "^3.0.1",
